добавила слайдер для отзывов

--- a/index.html
+++ b/index.html
@@ -234,32 +234,59 @@
     </section>
 
     <section class="reviews">
+
       <div class="reviews__box container">
         <h2 class="reviews__title main-title">Отзывы</h2>
         <div class="reviews__button">
           <button class="button reviews__button_type_write" type="button">написать</button>
         </div>
-        <div class="reviews__list">
+
+        <div class="reviews__slide reviews__showing">
           <blockquote class="reviews__item">
             <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества
               лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров
               и игрушек в Мишке и мои фотографии сразу стали более стильнее, а также набирают
               больше лайков!</p>
           </blockquote>
+          <div class="reviews__showing_author">
+            <span class="reviews__showing_author_name">Анастасия Красильникова</span>
+            <br>
+            <span>@misssssiskras</span>
+          </div>
         </div>
-        <div class="reviews__author">
-          <span class="reviews__author_type_name">Анастасия Красильникова</span>
-          <br>
-          <span>@misssssiskras</span>
+
+        <div class="reviews__slide">
+          <blockquote class="reviews__item">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quisquam nesciunt harum soluta fuga tempore! Hic, ratione
+              ipsam at, nesciunt distinctio recusandae dolorem consequuntur!
+              Blanditiis quisquam ab neque totam at.</p>
+          </blockquote>
+          <div class="reviews__showing_author">
+            <span class="reviews__showing_author_name">Анастасия Красильникова</span>
+            <br>
+            <span>@misssssiskras</span>
+          </div>
+        </div>
+
+        <div class="reviews__slide">
+          <blockquote class="reviews__item">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem architecto minima esse laudantium maxime quidem dolor, mollitia nihil repellat, animi voluptas quibusdam quisquam qui. Voluptatum voluptatem aspernatur dolore provident libero deserunt impedit in ex odit tempore obcaecati quam accusantium placeat consequatur quisquam aperiam, iusto, id minima natus quos. Veritatis fugiat debitis exercitationem.</p>
+          </blockquote>
+          <div class="reviews__showing_author">
+            <span class="reviews__showing_author_name">Анастасия Красильникова</span>
+            <br>
+            <span>@misssssiskras</span>
+          </div>
         </div>
 
         <div class="reviews__arrows">
-          <button class="reviews__arrows_type_button">
+          <button class="reviews__arrows_type_button left">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
               <polygon points="50,11.002 7.659,11.002 15.833,2.828 13.005,0 0,12.998 0.003,13.001 0,13.005 13.005,26.003 15.833,23.175 7.661,15.002 50,15.002 "/>
             </svg>
           </button>
-          <button class="reviews__arrows_type_button">
+          <button class="reviews__arrows_type_button right">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
               <polygon points="0,11.002 42.341,11.002 34.166,2.828 36.995,0 50,12.998 49.996,13.001 50,13.005 36.995,26.003 34.166,23.175 42.339,15.002 0,15.002 "/>
             </svg>
